<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fresh_config_menu"
        android:title="@string/fresh_config"
        app:showAsAction="never"/>
    <item
        android:id="@+id/invite_menu"
        android:title="@string/invite_menu_label"
        app:showAsAction="never"/>
    <item
        android:id="@+id/notification_menu"
        android:title="@string/notification"/>
    <item
        android:id="@+id/friend_list_menu"
        android:title="Friend List"/>

</menu>