<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_schedule_run_day"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.firebase.codelab.friendlychat.scheduleRunDay">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/my_toolbar">


        <TextView
            android:text="Days you wish to workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            tools:textSize="30sp"
            android:textColor="#454447"/>

        <CheckBox
            android:text="@string/monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c1" />

        <CheckBox
            android:text="@string/tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c2" />

        <CheckBox
            android:text="@string/wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c3" />

        <CheckBox
            android:text="@string/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c4" />

        <CheckBox
            android:text="@string/friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c5" />

        <CheckBox
            android:text="@string/saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c6" />

        <CheckBox
            android:text="@string/sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c7" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="下一步 >>"
            android:textStyle="bold|italic"
            android:visibility="gone"
            />

    </LinearLayout>
</RelativeLayout>
