<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.firebase.codelab.friendlychat.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainbar"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:text="POST" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/mainbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessParent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonHome"
            android:textStyle="normal|bold"
            android:textColor="#1e065b"
            android:textSize="20sp"
            android:background="#ffffff"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:text="@string/schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonSchedule"
            android:textColor="#454447"
            android:textSize="20sp"
            android:background="#ffffff"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:text="@string/talk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonTalk"
            android:textColor="#454447"
            android:textSize="20sp"
            android:background="#ffffff"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/> -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

</RelativeLayout>
